	.Depends which is set from the 'Depends' field of a package
	(even in packages with name spaces).  By default detach()
	prevents such dependencies from being detached in interactive
	use, and warns otherwise.  [The default is intended to be
	changed before release.]

    o	bquote() has been extended to work on function definitions
	(wish of PR#14031).


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)




	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.0 patched


NEW FEATURES

    o	The PCRE library has been updated to version 8.00.


INSTALLATION

    o	configure will be able to find a usable libtiff in some rare
	circumstances where it did not previously (where libtiff
	needed to be linked explicitly against -ljpeg).


DEPRECATED & DEFUNCT

    o	The 'extended' argument is deprecated in strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() (not just the
	value extended = FALSE) and will be removed in R 2.11.0.


BUG FIXES

    o	trigamma(x) and other psigamma(x, n) calls are now accurate for
	very large abs(x). (PR#14020)

    o	[g]sub(perl=FALSE, fixed=FALSE) could use excessive stack space
	when used with a very long vector containing some non-ASCII
	strings.

    o	The default method of weighted.mean(na.rm = TRUE) did not omit
	weights for NA observations in 2.10.0.	(PR#14032)
