@@ -2197,8 +2197,7 @@ SEXP attribute_hidden do_detach(SEXP call, SEXP op, SEXP args, SEXP env)
     }
 #endif
     UNPROTECT(1);
-    /* FIXME: this return value is unused nowadays */
-    return FRAME(s);
+    return s;
 }
 
 
